--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev --open",
+    "dev": "slidev",
+    "dev:open": "slidev --open",
     "export": "slidev export"
   },
   "dependencies": {
     "@slidev/cli": "^0.49.3",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "lucide-vue-next": "^0.379.0",
     "vue": "^3.4.27"
   }
 }
